# events-service

./: .env.dev  .env.dist  .gitignore  Makefile  docker-compose.dev.yml  pyproject.toml
.github/workflows/: cicd-stage.yml  development.yml  stage.yml
app/: factories.py  grpc_client.py  main.py  schemas.py  users.proto  utils.py  ws.py  ws_pool.py
app/gql/: base.py  router.py  types.py
app/project/: rabbit.py  settings.py
app/protousers/: users_pb2.py  users_pb2_grpc.py
app/services/: identification.py
docker/: Dockerfile.dev  Dockerfile.lint
kubernetes/stage/app/: deployment.yml  ingress.yml  service.yml
